# fine_tune

./: .gitignore  Cargo.toml  README.md  batch_convert.py  check_cook.py
inbox/: README.md
inbox/ca/: 15-mm-bbq-sauce-glazed-pork-tenderloin-68753a925a587f17f45898ec.recipe  adobo-inspired-coconut-chicken-breasts-641914518cb0d819770f408c.recipe  adobo-inspired-coconut-chicken-tenders-65004f83ccee50a6280782f6.recipe  aegean-sea-inspired-feta-beyond-meat-r-meatballs-662f57587ceb4fe1685f0e08.recipe  aegean-sea-inspired-feta-chicken-meatballs-652e3c471d34d3bb4908684c.recipe  aegean-sea-inspired-feta-double-meatballs-662f6745e7c9545da10029c7.recipe  aegean-sea-inspired-feta-meatballs-64db8ce2489932881f0c22e2.recipe  aegean-sea-inspired-feta-turkey-meatballs-662e62664e3d82e3ad931242.recipe  african-inspired-beyond-meat-and-peanut-soup-65d3b796ecdae008b4069b25.recipe  african-inspired-chicken-and-peanut-soup-665d351cc0b3b3007f953548.recipe  african-inspired-peanut-and-beyond-meat-soup-6540c39cf38b03902b07e982.recipe  al-pastor-inspired-rice-bowls-638ee1b69b48c1e9680061d3.recipe  all-dressed-chicken-tenders-63c57eb4db53750fd705eeb0.recipe  almond-crusted-chicken-63fdb7e5a5be5dc0bc0a50ff.recipe  almond-crusted-chicken-thigh-6600dc167b309a7a47f59224.recipe  almond-crusted-chicken-thighs-64d27786f9ec299950029571.recipe  almond-crusted-pork-60ed88ec21d51c40d0054f3f.recipe  (+6344 more)
labler/: Cargo.toml  README.md  REQUIREMENTS.md
labler/src/: cooklang_parser.rs  main.rs  markdown_renderer.rs  recipe_scanner.rs
labler/static/: index.html
recipes/: README.md
src/: main.rs
(+48781 files in other folders)
