[package]
name = "cooklang-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
cooklang = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
pulldown-cmark = "0.9"
env_logger = "0.11"
anyhow = "1.0"
